refactor(about): implement new about design
implement new design and move support chat button to remote config

--- a/app/src/main/res/xml/remote.xml
+++ b/app/src/main/res/xml/remote.xml
@@ -28,4 +28,8 @@
         <key>api_base_url</key>
         <value>https://app.eurofurence.org</value>
     </entry>
+    <entry>
+        <key>support_chat_url</key>
+        <value>https://app.eurofurence.org</value>
+    </entry>
 </defaultsMap>
