--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,13 +2,13 @@
 <resources>
     <item name="date" type="id"/>
     <item name="test_title" type="id"/>
-    <item name="danger" type="id">danger</item>
-    <item name="moon" type="id">moon</item>
+    <item name="danger" type="id" />
+    <item name="moon" type="id" />
 
-    <item name="dealer_container" type="id">5530</item>
-    <item name="dealer_map" type="id">5531</item>
+    <item name="dealer_container" type="id" />
+    <item name="dealer_map" type="id" />
 
-    <item name="event_map" type="id">27</item>
+    <item name="event_map" type="id" />
 
     <item name="home_current" type="id"/>
     <item name="home_upcoming" type="id"/>
