--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -71,7 +71,7 @@
             <item android:id="@+id/navDevSettings"
                   android:title="Settings"
                   android:icon="@drawable/icon_settings"/>
-            <item android:id="@+id/navAbout"
+            <item android:id="@id/fragmentViewAbout"
                   android:icon="@drawable/icon_about"
                   android:title="About"/>
         </menu>
