--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
     app:startDestination="@id/fragmentViewHome">
 
     <fragment
         android:id="@+id/fragmentViewHome"
         android:name="org.eurofurence.connavigator.ui.FragmentViewHome"
         android:label="Home">
-        <action
-            android:id="@+id/action_fragmentViewHome_to_fragmentViewEvents"
-            app:destination="@id/eventListFragment" />
         <deepLink app:uri="eurofurence://home/" />
         <action
             android:id="@+id/action_fragmentViewHome_to_fragmentViewEvent"
             app:destination="@id/fragmentViewEvent" />
         <action
-            android:id="@+id/action_fragmentViewHome_to_fragmentViewDealers"
-            app:destination="@id/dealerListFragment" />
-        <action
             android:id="@+id/action_fragmentViewHome_to_fragmentViewMaps"
             app:destination="@id/mapListFragment" />
-        <action
-            android:id="@+id/action_fragmentViewHome_to_infoListFragment2"
-            app:destination="@id/infoListFragment2" />
     </fragment>
     <activity
         android:id="@+id/navActivity"
@@ -69,9 +62,9 @@
     <fragment
         android:id="@+id/mapListFragment"
         android:name="org.eurofurence.connavigator.ui.MapListFragment"
-        android:label="Maps" />
+        android:label="Maps" ><deepLink app:uri="eurofurence://maps/"/></fragment>
     <fragment
-        android:id="@+id/infoListFragment2"
+        android:id="@+id/infoListFragment"
         android:name="org.eurofurence.connavigator.ui.InfoListFragment"
         android:label="InfoListFragment" >
         <action
@@ -82,4 +75,8 @@
         android:id="@+id/infoItemFragment"
         android:name="org.eurofurence.connavigator.ui.InfoItemFragment"
         android:label="InfoItemFragment" />
+    <fragment
+        android:id="@+id/fragmentViewAbout"
+        android:name="org.eurofurence.connavigator.ui.FragmentViewAbout"
+        android:label="About" />
 </navigation>
