--- a/app/src/main/res/layout/fview_events_viewpager.xml
+++ b/app/src/main/res/layout/fview_events_viewpager.xml
@@ -6,6 +6,10 @@
               android:layout_height="match_parent"
               android:animateLayoutChanges="true"
               android:background="@color/backgroundGrey">
+
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <android.support.v4.view.ViewPager android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:id="@+id/eventPager"
