add actions for dealers and info

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -80,7 +80,11 @@
     <fragment
         android:id="@+id/infoItemFragment"
         android:name="org.eurofurence.connavigator.ui.InfoItemFragment"
-        android:label="Info Details" />
+        android:label="Info Details" >
+        <argument
+            android:name="itemId"
+            app:argType="string" />
+    </fragment>
     <fragment
         android:id="@+id/fragmentViewAbout"
         android:name="org.eurofurence.connavigator.ui.FragmentViewAbout"
