update announcements, shortcuts and pushlistener service to create notifications again

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -122,6 +122,6 @@
         android:label="Announcement" >
         <argument
             android:name="announcementId"
-            app:argType="string" />
+            app:argType="string" /><deepLink app:uri="eurofurence://announcements/{announcementId}/"/>
     </fragment>
 </navigation>
