Change from hardcoded strings to String Resources

--- a/app/src/main/res/layout/fview_events_viewpager.xml
+++ b/app/src/main/res/layout/fview_events_viewpager.xml
@@ -21,7 +21,7 @@
             <EditText android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/eventSearchBar"
-                      android:hint="Search by title"
+                      android:hint="@string/event_pager_search_by_title"
                       android:padding="@dimen/outer_padding"
                       android:background="@color/cardview_light_background"/>
             <AbsoluteLayout android:layout_width="match_parent"
