--- a/app/src/main/res/layout/layout_nav_header.xml
+++ b/app/src/main/res/layout/layout_nav_header.xml
@@ -27,7 +27,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:text="Days"
+                android:text="@string/misc_days"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:id="@+id/navDays"
                 android:gravity="center_vertical"
@@ -38,14 +38,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:text="Eurofurence 24"
+            android:text="@string/navigation_drawer_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:id="@+id/navTitle"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Aviators - Conquer the Sky!"
+            android:text="@string/navigation_drawer_subtitle"
             android:id="@+id/navSubtitle"/>
 
 </LinearLayout>
