Change from hardcoded strings to String Resources Reordered String Resources

--- a/app/src/main/res/menu/action_bar.xml
+++ b/app/src/main/res/menu/action_bar.xml
@@ -3,7 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:visible="false">
         <item android:id="@+id/action_settings"
-              android:title="@string/action_settings"
+              android:title="@string/settings"
               android:orderInCategory="100"
               app:showAsAction="never"/>
         <item android:id="@+id/action_bug_report"
